refactor: 대댓글 시 중복으로 표시되는 문제 해결